Cleanup in frontend

--- a/packages/mhta-frontend/src/index.template.html
+++ b/packages/mhta-frontend/src/index.template.html
@@ -54,7 +54,7 @@
 <body>
     <div id="app">
         <div class="loading-info">
-            <h1>Dr Rieux</h1>
+            <h1>MHTA</h1>
             <p class="subtitle">is  loading  for  you</p>
             <div class="spnr"><div></div><div></div><div></div><div></div></div>
             <p class="error-info">
